kubernetes/03-web-app-service-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: apps
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
